<preference-headers xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- These settings headers are only used on tablets. -->

    <header
        android:icon="@drawable/ic_info_black_24dp"
        android:title="@string/pref_header_acerda_de">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="com.example.sensortemperatura"
            android:targetClass="com.example.sensortemperatura.pantallas.AcercaDeActivity" />
    </header>

    <header
        android:fragment="com.example.sensortemperatura.pantallas.SettingsActivity$NotificacionesPreferenceFragment"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/pref_header_notificaciones" />


    <header
        android:fragment="com.example.sensortemperatura.pantallas.SettingsActivity$SincronizacionPreferenceFragment"
        android:icon="@drawable/ic_import_export_black_24dp"
        android:title="@string/pref_header_configurar_servidor" />

</preference-headers>
