<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    tools:context=".pantallas.loginActivity"
    android:background="@color/colorPrimary">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="180dp"
            android:src="@drawable/logo_app"
            android:id="@+id/logo_img"
            android:layout_weight="0" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/user_tf"
            android:hint="@string/user"
            android:focusable="true"
            android:textColorHighlight="#00ff00"
            android:textColorHint="#aaa"
            android:layout_marginBottom="20dp"
            android:background="@color/textFieldBackground"
            android:padding="10dp"
            android:inputType="textShortMessage"
            android:maxLines="1" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/password_tf"
            android:textColorHint="#aaa"
            android:hint="@string/password"
            android:layout_marginBottom="20dp"
            android:background="@color/textFieldBackground"
            android:padding="10dp" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:id="@+id/login_btn"
            android:padding="10dp"
            android:clickable="false"
            android:background="@drawable/bg_button"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/logoGalileo"
                android:src="@drawable/galileo"
                android:contentDescription="Logo Galileo"
                android:layout_alignParentRight="false"
                android:layout_alignParentBottom="true"
                android:layout_alignParentEnd="false" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/register"
                android:id="@+id/register_txt"
                android:textColor="#fff"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:elegantTextHeight="false"
                android:singleLine="false"
                android:clickable="true"
                android:linksClickable="true"
                android:paddingBottom="5dp"
                android:paddingLeft="10dp"
                android:paddingTop="10dp"
                android:paddingRight="10dp" />
        </RelativeLayout>
    </LinearLayout>
</RelativeLayout>